Structure accueil terminer

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,6 +8,185 @@
     <title>Ohmyfood</title>
 </head>
 <body>
-    
+    <header class="header">
+        <div class="header__box-logo">
+            <img class="header__box-logo--logo" alt="logo ohmyfood" src="./sources/logo/ohmyfood.png">
+        </div>
+        <div class="header__box-position">
+            <img class="header__box-position--picto" alt="pictogramme position carte" src="/sources/picto/picto_carte.png">
+            <p class="header__box-position--txt">
+                Paris, Belleville
+            </p>
+        </div>
+        <div class="header__box-decouverte">
+            <h1 class="header__box-decouverte--titre">
+                Réservez le menu qui<br>
+                vous convient
+            </h1>
+            <p class="header__box-decouverte--txt">
+                Découvrez des restaurants d'exception,<br>
+                séléctionnés par nos soins.
+            </p>
+            <button class="header__box-decouverte--bouton">
+                Explorer nos restaurants
+            </button>
+        </div>
+        <div class="header__box-titre">
+            <h2 class="header__box-titre--titre">
+                Fonctionnement
+            </h2>
+        </div>
+        <div class="header__box-nav">
+            <nav class="header__box-nav--nav">
+                <ul class="ul">                    
+                    <li>
+                        <a class="ul__a" href="">   
+                            <div class="ul__a--rond">
+                                1
+                            </div>
+                            <img class="ul__a--picto" src="/sources/picto/picto_mobile.png" alt="pictogramme d'un smartphone">
+                            Choisissez un restaurant
+                        </a>
+                    </li>
+                    <li>
+                        <a class="ul__a" href="">
+                            <div class="ul__a--rond">
+                                2
+                            </div>
+                            <img class="ul__a--picto" src="/sources/picto/picto_menu.png" alt="pictogramme d'un smartphone">
+                            Composez votre menu
+                        </a>
+                    </li>
+                    <li>
+                        <a class="ul__a" href="">
+                            <div class="ul__a--rond">
+                                3
+                            </div>
+                            <img class="ul__a--picto" src="/sources/picto/picto_store.png" alt="pictogramme d'un commerce">
+                            Dégustez au restaurant
+                        </a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+    <main class="main">
+        <article class="main__article">
+            <div class="main__article--box-titre">
+                <h2>
+                    Restaurants
+                </h2>
+            </div>
+            <div class="main__article--box-sections">
+                <section class="section">
+                    <div class="section__box-img">
+                        <div class="section__box-img--box-nouveau">
+                            <p class="nouveau__txt">
+                                Nouveau
+                            </p>
+                        </div>
+                        <img class="section__box-img--img" alt="La palette du goût" src="/sources/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.png">
+                    </div>
+                    <div class="section__box-description">
+                        <div class="section__box-description--txt">
+                            <h3>
+                                La palette du goût
+                            </h3>
+                            <p>
+                                Ménilmontant
+                            </p>
+                        </div>
+                        <img class="section__box-description--box-picto" alt="Pictogramme d'un coeur" src="/sources/picto/picto_coeur.png">
+                    </div>
+                </section>
+                <section class="section">
+                    <div class="section__box-img">
+                        <div class="section__box-img--box-nouveau">
+                            <p class="nouveau__txt">
+                                Nouveau
+                            </p>
+                        </div>
+                        <img class="section__box-img--img" alt="La palette du goût" src="/sources/restaurants/stil-u2Lp8tXIcjw-unsplash.png">
+                    </div>
+                    <div class="section__box-description">
+                        <div class="section__box-description--txt">
+                            <h3>
+                                La note enchantée
+                            </h3>
+                            <p>
+                                Charonne
+                            </p>
+                        </div>
+                        <img class="section__box-description--box-picto" alt="Pictogramme d'un coeur" src="/sources/picto/picto_coeur.png">
+                    </div>
+                </section>
+                <section class="section">
+                    <div class="section__box-img">
+                        <img class="section__box-img--img" alt="La palette du goût" src="/sources/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.png">
+                    </div>
+                    <div class="section__box-description">
+                        <div class="section__box-description--txt">
+                            <h3>
+                                À la française
+                            </h3>
+                            <p>
+                                Cité Rouge
+                            </p>
+                        </div>
+                        <img class="section__box-description--box-picto" alt="Pictogramme d'un coeur" src="/sources/picto/picto_coeur.png">
+                    </div>
+                </section>
+                <section class="section">
+                    <div class="section__box-img">
+                        <img class="section__box-img--img" alt="La palette du goût" src="/sources/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.png">
+                    </div>
+                    <div class="section__box-description">
+                        <div class="section__box-description--txt">
+                            <h3>
+                               Le délice des sens
+                            </h3>
+                            <p>
+                                Folie-Méricourt
+                            </p>
+                        </div>
+                        <img class="section__box-description--box-picto" alt="Pictogramme d'un coeur" src="/sources/picto/picto_coeur.png">
+                    </div>
+                </section>
+            </div>
+        </article>
+    </main>
+    <footer class="footer">
+        <div class="footer__box-logo">
+            <img class="footer__box-logo--logo" alt="logo en blanc" src="sources/logo/ohmyfood_blanc.png">
+        </div>
+        <nav> 
+            <ul class="footer__box-nav-icones">
+                <li>
+                    <a href="">
+                        <img class="footer__box-nav-icones--picto" alt="pictograme d'une fouchette et d'un couteau" src="/sources/picto/picto_restaurant.png">
+                        Proposer un restaurant
+                    </a>
+                </li>
+                <li>
+                    <a href="">
+                        <img class="footer__box-nav-icones--picto" alt="pictogramme d'une poignée de main" src="/sources/picto/picto_partenaire.png">
+                        Devenir partenaire
+                    </a>
+                </li>
+            </ul>
+            <ul class="footer__box-nav">
+                <li>
+                    <a href="">
+                        Mentions légales
+                    </a>
+                </li>
+                <li>
+                    <a href="">
+                        Contact
+                    </a>
+                </li>
+            </ul>      
+        </nav>
+    </footer>
 </body>
 </html>
