Ajout des couleur le style pour l'accueil

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         </div>
         <div class="header__box-position">
             <img class="header__box-position--picto" alt="pictogramme position carte" src="/sources/picto/picto_carte.png">
-            <p class="header__box-position--txt">
+            <p class="header__box-position--txt regular">
                 Paris, Belleville
             </p>
         </div>
