Survole des coeur et des sections

--- a/index.html
+++ b/index.html
@@ -78,80 +78,88 @@
                 </h2>
             </div>
             <div class="main__article--box-sections">
-                <section class="section">
-                    <div class="section__box-img">
-                        <div class="section__box-img--box-nouveau">
-                            <p class="nouveau__txt">
-                                Nouveau
-                            </p>
+                <a href="">
+                    <section class="section">
+                        <div class="section__box-img">
+                            <div class="section__box-img--box-nouveau">
+                                <p class="nouveau__txt">
+                                    Nouveau
+                                </p>
+                            </div>
+                            <img class="section__box-img--img" alt="La palette du goût" src="/sources/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.png">
                         </div>
-                        <img class="section__box-img--img" alt="La palette du goût" src="/sources/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.png">
-                    </div>
-                    <div class="section__box-description">
-                        <div class="section__box-description--txt">
-                            <h3>
-                                La palette du goût
-                            </h3>
-                            <p>
-                                Ménilmontant
-                            </p>
+                        <div class="section__box-description">
+                            <div class="section__box-description--txt">
+                                <h3>
+                                    La palette du goût
+                                </h3>
+                                <p>
+                                    Ménilmontant
+                                </p>
+                            </div>
+                            <div class="section__box-description--box-picto"></div>
                         </div>
-                        <img class="section__box-description--box-picto" alt="Pictogramme d'un coeur" src="/sources/picto/picto_coeur.png">
-                    </div>
-                </section>
-                <section class="section">
-                    <div class="section__box-img">
-                        <div class="section__box-img--box-nouveau">
-                            <p class="nouveau__txt">
-                                Nouveau
-                            </p>
+                    </section>
+                </a>
+                <a href="">
+                    <section class="section">
+                        <div class="section__box-img">
+                            <div class="section__box-img--box-nouveau">
+                                <p class="nouveau__txt">
+                                    Nouveau
+                                </p>
+                            </div>
+                            <img class="section__box-img--img" alt="La palette du goût" src="/sources/restaurants/stil-u2Lp8tXIcjw-unsplash.png">
                         </div>
-                        <img class="section__box-img--img" alt="La palette du goût" src="/sources/restaurants/stil-u2Lp8tXIcjw-unsplash.png">
-                    </div>
-                    <div class="section__box-description">
-                        <div class="section__box-description--txt">
-                            <h3>
-                                La note enchantée
-                            </h3>
-                            <p>
-                                Charonne
-                            </p>
+                        <div class="section__box-description">
+                            <div class="section__box-description--txt">
+                                <h3>
+                                    La note enchantée
+                                </h3>
+                                <p>
+                                    Charonne
+                                </p>
+                            </div>
+                            <div class="section__box-description--box-picto"></div>
                         </div>
-                        <img class="section__box-description--box-picto" alt="Pictogramme d'un coeur" src="/sources/picto/picto_coeur.png">
-                    </div>
-                </section>
-                <section class="section">
-                    <div class="section__box-img">
-                        <img class="section__box-img--img" alt="La palette du goût" src="/sources/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.png">
-                    </div>
-                    <div class="section__box-description">
-                        <div class="section__box-description--txt">
-                            <h3>
-                                À la française
-                            </h3>
-                            <p>
-                                Cité Rouge
-                            </p>
+                    </section>
+                </a>
+                <a href="">
+                    <section class="section">
+                        <div class="section__box-img">
+                            <img class="section__box-img--img" alt="La palette du goût" src="/sources/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.png">
                         </div>
-                        <img class="section__box-description--box-picto" alt="Pictogramme d'un coeur" src="/sources/picto/picto_coeur.png">
-                    </div>
-                </section>
-                <section class="section">
-                    <div class="section__box-img">
-                        <img class="section__box-img--img" alt="La palette du goût" src="/sources/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.png">
-                    </div>
-                    <div class="section__box-description">
-                        <div class="section__box-description--txt">
-                            <h3>
-                               Le délice des sens
-                            </h3>
-                            <p>
-                                Folie-Méricourt
-                            </p>
+                        <div class="section__box-description">
+                            <div class="section__box-description--txt">
+                                <h3>
+                                    À la française
+                                </h3>
+                                <p>
+                                    Cité Rouge
+                                </p>
+                            </div>
+                            <div class="section__box-description--box-picto"></div>
                         </div>
-                        <img class="section__box-description--box-picto" alt="Pictogramme d'un coeur" src="/sources/picto/picto_coeur.png">
-                    </div>
-                </section>
+                    </section>
+                </a>
+                <a href="">
+                    <section class="section">
+                        <div class="section__box-img">
+                            <img class="section__box-img--img" alt="La palette du goût" src="/sources/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.png">
+                        </div>
+                        <div class="section__box-description">
+                            <div class="section__box-description--txt">
+                                <h3>
+                                Le délice des sens
+                                </h3>
+                                <p>
+                                    Folie-Méricourt
+                                </p>
+                            </div>
+                            <div class="section__box-description--box-picto"></div>
+                        </div>
+                    </section>
+                </a>
             </div>
         </article>
     </main>
