Survol bouton terminer

--- a/index.html
+++ b/index.html
@@ -37,32 +37,29 @@
             </h2>
         </div>
         <div class="header__box-nav">
-            <nav class="header__box-nav--nav">
-                <ul class="ul">                    
+            <nav>
+                <ul>
                     <li>
-                        <a class="ul__a" href="">   
-                            <div class="ul__a--rond">
-                                1
+                        <a class="header__box-nav--picto-tel">
+                            <div class="rond">
+                            1
                             </div>
-                            <img class="ul__a--picto" src="/sources/picto/picto_mobile.png" alt="pictogramme d'un smartphone">
                             Choisissez un restaurant
                         </a>
                     </li>
                     <li>
-                        <a class="ul__a" href="">
-                            <div class="ul__a--rond">
-                                2
+                        <a class="header__box-nav--picto-menu">
+                            <div class="rond">
+                            2
                             </div>
-                            <img class="ul__a--picto" src="/sources/picto/picto_menu.png" alt="pictogramme d'un smartphone">
                             Composez votre menu
                         </a>
                     </li>
                     <li>
-                        <a class="ul__a" href="">
-                            <div class="ul__a--rond">
-                                3
+                        <a class="header__box-nav--picto-store">
+                            <div class="rond">
+                            3
                             </div>
-                            <img class="ul__a--picto" src="/sources/picto/picto_store.png" alt="pictogramme d'un commerce">
                             Dégustez au restaurant
                         </a>
                     </li>
