--- a/le_delice_des_sens.html
+++ b/le_delice_des_sens.html
@@ -15,11 +15,11 @@
             </a>
             <img class="header__box-logo--logo" alt="logo ohmyfood" src="./sources/logo/ohmyfood.png">
         </div>
-        <img class="header__image" alt="La palette du goût" src="/sources/restaurants/xl_restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg">
+        <img class="header__image" alt="La palette du goût" src="/sources/restaurants/xl_restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg">
     </header>
     <main class="main-menu">
         <div class="main-menu__box-titre">
-            <h1 class="main-menu__box-titre--titre">La palette du goût</h1>
+            <h1 class="main-menu__box-titre--titre">Le délice des sens</h1>
             <div class="main-menu__box-titre--coeur"></div>
         </div>
         <article class="article-menu">
@@ -33,10 +33,10 @@
                 <section class="box-sections-menu__section anim-section1">
                     <div class="box-sections-menu__section--txt">
                         <h3>
-                            Fricassée d'escargot
+                            Tartare de thon
                         </h3>
                         <p class="zone-txt">
-                            Au pimet d'espelette
+                            Assaisonné au yuzu
                         </p>
                         <p>
                             <span>
@@ -51,10 +51,10 @@
                 <section class="box-sections-menu__section anim-section2">
                     <div class="box-sections-menu__section--txt">
                         <h3>
-                            Foie gras de canard mi-cuit
+                            Bouchée de homard croustillant 
                         </h3>
                         <p class="zone-txt">
-                            Et ses copeaux de truffe noire
+                            Et sa farandole de petits légumes
                         </p>
                         <p>
                             <span>
@@ -69,11 +69,11 @@
                 <section class="box-sections-menu__section anim-section3">
                     <div class="box-sections-menu__section--txt">
                         <h3>
-                            Oeuf au plat
+                            Velouté de cèpes 
                         </h3>
                         <div class="zone-txt">
                         <p>
-                            Assaisonné à la truffe sur lit de caviar
+                            Aux truffes
                         </p>
                     </div>
                         <p>
@@ -99,10 +99,10 @@
                 <section class="box-sections-menu__section anim-section4">
                     <div class="box-sections-menu__section--txt">
                         <h3>
-                            Filet de boeuf aux herbes 
+                            Poulet rôti aux herbes de provence 
                         </h3>
                         <p class="zone-txt">
-                            Accompagné de sa ribambelle de légumes
+                            Et sa crème de truffe
                         </p>
                         <p>
                             <span>
@@ -117,10 +117,10 @@
                 <section class="box-sections-menu__section anim-section5">
                     <div class="box-sections-menu__section--txt">
                         <h3>
-                            Parmentier de queue de boeuf
+                            Langouste rôtie 
                         </h3>
                         <p class="zone-txt">
-                            À la truffe noire sur sa purée de panais
+                            Et ses légumes de saison
                         </p>
                         <p>
                             <span>
@@ -135,11 +135,11 @@
                 <section class="box-sections-menu__section anim-section6">
                     <div class="box-sections-menu__section--txt">
                         <h3>
-                            Filet de turbot
+                            Côte de boeuf angus 
                         </h3>
                         <div class="zone-txt">
                         <p>
-                            Aux agrumes
+                            Et sa purée de panais
                         </p>
                     </div>
                         <p>
@@ -165,10 +165,10 @@
                 <section class="box-sections-menu__section anim-section7">
                     <div class="box-sections-menu__section--txt">
                         <h3>
-                            Paris-Brest
+                            Farandole de desserts
                         </h3>
                         <p class="zone-txt">
-                            Revisité
+                            Du chef
                         </p>
                         <p>
                             <span>
@@ -183,10 +183,10 @@
                 <section class="box-sections-menu__section anim-section8">
                     <div class="box-sections-menu__section--txt">
                         <h3>
-                            Macaron au chocolat d'exception
+                            Crème brulée
                         </h3>
                         <p class="zone-txt">
-                            Et glace à la vanille de Madagascar
+                            Revisitée
                         </p>
                         <p>
                             <span>
@@ -201,16 +201,16 @@
                 <section class="box-sections-menu__section anim-section9">
                     <div class="box-sections-menu__section--txt">
                         <h3>
-                            Mousse au chocolat
+                            Tiramisu
                         </h3>
                         <div class="zone-txt">
                         <p>
-                            Au piment d'espelette et à la truffe noire
+                            À la noisette
                         </p>
                     </div>
                         <p>
                             <span>
-                                44€
+                                23€
                             </span>
                         </p>
                     </div>
