--- a/a_la_francaise.html
+++ b/a_la_francaise.html
@@ -15,11 +15,11 @@
             </a>
             <img class="header__box-logo--logo" alt="logo ohmyfood" src="./sources/logo/ohmyfood.png">
         </div>
-        <img class="header__image" alt="La palette du goût" src="/sources/restaurants/xl_restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg">
+        <img class="header__image" alt="La palette du goût" src="/sources/restaurants/xl_restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg">
     </header>
     <main class="main-menu">
         <div class="main-menu__box-titre">
-            <h1 class="main-menu__box-titre--titre">La palette du goût</h1>
+            <h1 class="main-menu__box-titre--titre">À la française</h1>
             <div class="main-menu__box-titre--coeur"></div>
         </div>
         <article class="article-menu">
@@ -33,10 +33,10 @@
                 <section class="box-sections-menu__section anim-section1">
                     <div class="box-sections-menu__section--txt">
                         <h3>
-                            Fricassée d'escargot
+                            Tartare de poulpe acidulé
                         </h3>
                         <p class="zone-txt">
-                            Au pimet d'espelette
+                            Aux zestes d'orange
                         </p>
                         <p>
                             <span>
@@ -51,10 +51,10 @@
                 <section class="box-sections-menu__section anim-section2">
                     <div class="box-sections-menu__section--txt">
                         <h3>
-                            Foie gras de canard mi-cuit
+                            Velouté de légumes d'antan
                         </h3>
                         <p class="zone-txt">
-                            Et ses copeaux de truffe noire
+                            Carotte, panais, topinambour
                         </p>
                         <p>
                             <span>
@@ -69,11 +69,11 @@
                 <section class="box-sections-menu__section anim-section3">
                     <div class="box-sections-menu__section--txt">
                         <h3>
-                            Oeuf au plat
+                            Soupe à l'oignon
                         </h3>
                         <div class="zone-txt">
                         <p>
-                            Assaisonné à la truffe sur lit de caviar
+                            Revisitée
                         </p>
                     </div>
                         <p>
@@ -99,10 +99,10 @@
                 <section class="box-sections-menu__section anim-section4">
                     <div class="box-sections-menu__section--txt">
                         <h3>
-                            Filet de boeuf aux herbes 
+                            Coquilles Saint-Jacques
                         </h3>
                         <p class="zone-txt">
-                            Accompagné de sa ribambelle de légumes
+                            Accompagnées d'une purée de panais
                         </p>
                         <p>
                             <span>
@@ -117,10 +117,10 @@
                 <section class="box-sections-menu__section anim-section5">
                     <div class="box-sections-menu__section--txt">
                         <h3>
-                            Parmentier de queue de boeuf
+                            Magret de canard
                         </h3>
                         <p class="zone-txt">
-                            À la truffe noire sur sa purée de panais
+                            Et parmentier de pommes de terre
                         </p>
                         <p>
                             <span>
@@ -135,11 +135,11 @@
                 <section class="box-sections-menu__section anim-section6">
                     <div class="box-sections-menu__section--txt">
                         <h3>
-                            Filet de turbot
+                            Pigeonneau d’Ille-et-Vilaine
                         </h3>
                         <div class="zone-txt">
                         <p>
-                            Aux agrumes
+                            Sur son lit de gnocchis aux légumes
                         </p>
                     </div>
                         <p>
@@ -165,10 +165,10 @@
                 <section class="box-sections-menu__section anim-section7">
                     <div class="box-sections-menu__section--txt">
                         <h3>
-                            Paris-Brest
+                            Pétales de violettes glacés
                         </h3>
                         <p class="zone-txt">
-                            Revisité
+                            Et purée de noisettes
                         </p>
                         <p>
                             <span>
@@ -183,10 +183,10 @@
                 <section class="box-sections-menu__section anim-section8">
                     <div class="box-sections-menu__section--txt">
                         <h3>
-                            Macaron au chocolat d'exception
+                            Fondant au chocolat
                         </h3>
                         <p class="zone-txt">
-                            Et glace à la vanille de Madagascar
+                            Revisité
                         </p>
                         <p>
                             <span>
@@ -201,16 +201,16 @@
                 <section class="box-sections-menu__section anim-section9">
                     <div class="box-sections-menu__section--txt">
                         <h3>
-                            Mousse au chocolat
+                            Millefeuille croustillant
                         </h3>
                         <div class="zone-txt">
                         <p>
-                            Au piment d'espelette et à la truffe noire
+                            Myrtilles et pâte d’amande
                         </p>
                     </div>
                         <p>
                             <span>
-                                44€
+                                23€
                             </span>
                         </p>
                     </div>
