--- a/la_note_enchantee.html
+++ b/la_note_enchantee.html
@@ -15,11 +15,11 @@
             </a>
             <img class="header__box-logo--logo" alt="logo ohmyfood" src="./sources/logo/ohmyfood.png">
         </div>
-        <img class="header__image" alt="La palette du goût" src="/sources/restaurants/xl_restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg">
+        <img class="header__image" alt="La palette du goût" src="/sources/restaurants/xl_restaurants/stil-u2Lp8tXIcjw-unsplash.jpg">
     </header>
     <main class="main-menu">
         <div class="main-menu__box-titre">
-            <h1 class="main-menu__box-titre--titre">La palette du goût</h1>
+            <h1 class="main-menu__box-titre--titre">La note enchantée</h1>
             <div class="main-menu__box-titre--coeur"></div>
         </div>
         <article class="article-menu">
@@ -33,10 +33,10 @@
                 <section class="box-sections-menu__section anim-section1">
                     <div class="box-sections-menu__section--txt">
                         <h3>
-                            Fricassée d'escargot
+                            Ravioles de foie gras 
                         </h3>
                         <p class="zone-txt">
-                            Au pimet d'espelette
+                            Accompagnés de leur crème à la truffe
                         </p>
                         <p>
                             <span>
@@ -51,10 +51,10 @@
                 <section class="box-sections-menu__section anim-section2">
                     <div class="box-sections-menu__section--txt">
                         <h3>
-                            Foie gras de canard mi-cuit
+                            Caviar osciètre
                         </h3>
                         <p class="zone-txt">
-                            Et ses copeaux de truffe noire
+                            Sur blini à la farine de blé noir
                         </p>
                         <p>
                             <span>
@@ -69,16 +69,36 @@
                 <section class="box-sections-menu__section anim-section3">
                     <div class="box-sections-menu__section--txt">
                         <h3>
-                            Oeuf au plat
+                            Homard et espuma de potiron
                         </h3>
                         <div class="zone-txt">
                         <p>
-                            Assaisonné à la truffe sur lit de caviar
+                            Mariné aux zestes d'orange
                         </p>
                     </div>
                         <p>
                             <span>
                                 20€
+                            </span>
+                        </p>
+                    </div>
+                    <div class="box-sections-menu__section--check">
+                       <img class="box-sections-menu__section--check--img"  src="/sources/picto/picto_check.png">
+                    </div>
+                </section>
+                <section class="box-sections-menu__section anim-section4">
+                    <div class="box-sections-menu__section--txt">
+                        <h3>
+                            Foie gras de canard cuit entier
+                        </h3>
+                        <div class="zone-txt">
+                        <p>
+                            Confiture de figue et pain toasté
+                        </p>
+                    </div>
+                        <p>
+                            <span>
+                                35€
                             </span>
                         </p>
                     </div>
@@ -96,13 +116,13 @@
                 <div class="article-menu__box-titre--trait"></div>
             </div>
             <div class="box-sections-menu">
-                <section class="box-sections-menu__section anim-section4">
+                <section class="box-sections-menu__section anim-section5">
                     <div class="box-sections-menu__section--txt">
                         <h3>
-                            Filet de boeuf aux herbes 
+                            Noix de coquilles Saint-Jacques
                         </h3>
                         <p class="zone-txt">
-                            Accompagné de sa ribambelle de légumes
+                            Sur lit de purée de céleri-rave
                         </p>
                         <p>
                             <span>
@@ -114,13 +134,13 @@
                        <img class="box-sections-menu__section--check--img"  src="/sources/picto/picto_check.png">
                     </div>
                 </section>
-                <section class="box-sections-menu__section anim-section5">
+                <section class="box-sections-menu__section anim-section6">
                     <div class="box-sections-menu__section--txt">
                         <h3>
-                            Parmentier de queue de boeuf
+                            Langoustine poêlée
                         </h3>
                         <p class="zone-txt">
-                            À la truffe noire sur sa purée de panais
+                            Purée de patate douce
                         </p>
                         <p>
                             <span>
@@ -132,14 +152,14 @@
                        <img class="box-sections-menu__section--check--img"  src="/sources/picto/picto_check.png">
                     </div>
                 </section>
-                <section class="box-sections-menu__section anim-section6">
+                <section class="box-sections-menu__section anim-section7">
                     <div class="box-sections-menu__section--txt">
                         <h3>
-                            Filet de turbot
+                            Mijoté de queue de boeuf
                         </h3>
                         <div class="zone-txt">
                         <p>
-                            Aux agrumes
+                            Et riz sauvage aux zestes de citron
                         </p>
                     </div>
                         <p>
@@ -162,13 +182,13 @@
                 <div class="article-menu__box-titre--trait"></div>
             </div>
             <div class="box-sections-menu">
-                <section class="box-sections-menu__section anim-section7">
+                <section class="box-sections-menu__section anim-section8">
                     <div class="box-sections-menu__section--txt">
                         <h3>
-                            Paris-Brest
+                            Macaron noisette et chocolat
                         </h3>
                         <p class="zone-txt">
-                            Revisité
+                            Glace au caramel brun et sel de Guérande
                         </p>
                         <p>
                             <span>
@@ -180,13 +200,13 @@
                        <img class="box-sections-menu__section--check--img"  src="/sources/picto/picto_check.png">
                     </div>
                 </section>
-                <section class="box-sections-menu__section anim-section8">
+                <section class="box-sections-menu__section anim-section9">
                     <div class="box-sections-menu__section--txt">
                         <h3>
-                            Macaron au chocolat d'exception
+                            Baba au rhum revisité
                         </h3>
                         <p class="zone-txt">
-                            Et glace à la vanille de Madagascar
+                            Avec son coulis de citron
                         </p>
                         <p>
                             <span>
@@ -198,19 +218,19 @@
                        <img class="box-sections-menu__section--check--img"  src="/sources/picto/picto_check.png">
                     </div>
                 </section>
-                <section class="box-sections-menu__section anim-section9">
+                <section class="box-sections-menu__section anim-section10">
                     <div class="box-sections-menu__section--txt">
                         <h3>
-                            Mousse au chocolat
+                            Tarte au citron meringuée 
                         </h3>
                         <div class="zone-txt">
                         <p>
-                            Au piment d'espelette et à la truffe noire
+                            Déstructurée
                         </p>
                     </div>
                         <p>
                             <span>
-                                44€
+                                23€
                             </span>
                         </p>
                     </div>
