Changement liens relatif

--- a/la_palette_du_goût.html
+++ b/la_palette_du_goût.html
@@ -11,11 +11,11 @@
     <header class="header">
         <div class="header__box-logo">
             <a href="index.html">
-                <img class="header__box-logo--picto-fleche" alt="pictogramme d'une flèche" src="/sources/picto/picto_fleche.png">
+                <img class="header__box-logo--picto-fleche" alt="pictogramme d'une flèche" src="./sources/picto/picto_fleche.png">
             </a>
             <img class="header__box-logo--logo" alt="logo ohmyfood" src="./sources/logo/ohmyfood.png">
         </div>
-        <img class="header__image" alt="La palette du goût" src="/sources/restaurants/xl_restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg">
+        <img class="header__image" alt="La palette du goût" src="./sources/restaurants/xl_restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg">
     </header>
     <main class="main-menu">
         <div class="main-menu__box-titre">
@@ -45,7 +45,7 @@
                         </p>
                     </div>
                     <div class="box-sections-menu__section--check">
-                       <img class="box-sections-menu__section--check--img"  src="/sources/picto/picto_check.png">
+                       <img class="box-sections-menu__section--check--img"  src="./sources/picto/picto_check.png">
                     </div>
                 </section>
                 <section class="box-sections-menu__section anim-section2">
@@ -228,19 +228,19 @@
     </main>
     <footer class="footer">
         <div class="footer__box-logo">
-            <img class="footer__box-logo--logo" alt="logo en blanc" src="sources/logo/ohmyfood_blanc.png">
+            <img class="footer__box-logo--logo" alt="logo en blanc" src="./sources/logo/ohmyfood_blanc.png">
         </div>
         <nav> 
             <ul class="footer__box-nav-icones">
                 <li>
                     <a href="">
-                        <img class="footer__box-nav-icones--picto" alt="pictograme d'une fouchette et d'un couteau" src="/sources/picto/picto_restaurant.png">
+                        <img class="footer__box-nav-icones--picto" alt="pictograme d'une fouchette et d'un couteau" src="./sources/picto/picto_restaurant.png">
                         Proposer un restaurant
                     </a>
                 </li>
                 <li>
                     <a href="">
-                        <img class="footer__box-nav-icones--picto" alt="pictogramme d'une poignée de main" src="/sources/picto/picto_partenaire.png">
+                        <img class="footer__box-nav-icones--picto" alt="pictogramme d'une poignée de main" src="./sources/picto/picto_partenaire.png">
                         Devenir partenaire
                     </a>
                 </li>
