--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <img class="header__box-logo--logo" alt="logo ohmyfood" src="./sources/logo/ohmyfood.png">
         </div>
         <div class="header__box-position">
-            <img class="header__box-position--picto" alt="pictogramme position carte" src="/sources/picto/picto_carte.png">
+            <img class="header__box-position--picto" alt="pictogramme position carte" src="./sources/picto/picto_carte.png">
             <p class="header__box-position--txt regular">
                 Paris, Belleville
             </p>
@@ -83,7 +83,7 @@
                                     Nouveau
                                 </p>
                             </div>
-                            <img class="section__box-img--img" alt="La palette du goût" src="/sources/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.png">
+                            <img class="section__box-img--img" alt="La palette du goût" src="./sources/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.png">
                         </div>
                         <div class="section__box-description">
                             <div class="section__box-description--txt">
@@ -106,7 +106,7 @@
                                     Nouveau
                                 </p>
                             </div>
-                            <img class="section__box-img--img" alt="La palette du goût" src="/sources/restaurants/stil-u2Lp8tXIcjw-unsplash.png">
+                            <img class="section__box-img--img" alt="La palette du goût" src="./sources/restaurants/stil-u2Lp8tXIcjw-unsplash.png">
                         </div>
                         <div class="section__box-description">
                             <div class="section__box-description--txt">
@@ -124,7 +124,7 @@
                 <a href="/a_la_francaise.html">
                     <section class="section">
                         <div class="section__box-img">
-                            <img class="section__box-img--img" alt="La palette du goût" src="/sources/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.png">
+                            <img class="section__box-img--img" alt="La palette du goût" src="./sources/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.png">
                         </div>
                         <div class="section__box-description">
                             <div class="section__box-description--txt">
@@ -142,7 +142,7 @@
                 <a href="/le_delice_des_sens.html">
                     <section class="section">
                         <div class="section__box-img">
-                            <img class="section__box-img--img" alt="La palette du goût" src="/sources/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.png">
+                            <img class="section__box-img--img" alt="La palette du goût" src="./sources/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.png">
                         </div>
                         <div class="section__box-description">
                             <div class="section__box-description--txt">
@@ -162,19 +162,19 @@
     </main>
     <footer class="footer">
         <div class="footer__box-logo">
-            <img class="footer__box-logo--logo" alt="logo en blanc" src="sources/logo/ohmyfood_blanc.png">
+            <img class="footer__box-logo--logo" alt="logo en blanc" src="./sources/logo/ohmyfood_blanc.png">
         </div>
         <nav> 
             <ul class="footer__box-nav-icones">
                 <li>
                     <a href="">
-                        <img class="footer__box-nav-icones--picto" alt="pictograme d'une fouchette et d'un couteau" src="/sources/picto/picto_restaurant.png">
+                        <img class="footer__box-nav-icones--picto" alt="pictograme d'une fouchette et d'un couteau" src="./sources/picto/picto_restaurant.png">
                         Proposer un restaurant
                     </a>
                 </li>
                 <li>
                     <a href="">
-                        <img class="footer__box-nav-icones--picto" alt="pictogramme d'une poignée de main" src="/sources/picto/picto_partenaire.png">
+                        <img class="footer__box-nav-icones--picto" alt="pictogramme d'une poignée de main" src="./sources/picto/picto_partenaire.png">
                         Devenir partenaire
                     </a>
                 </li>
