--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                 </h2>
             </div>
             <div class="main__article--box-sections">
-                <a href="la_palette_du_goût.html">
+                <a href="./la_palette_du_goût.html">
                     <section class="section">
                         <div class="section__box-img">
                             <div class="section__box-img--box-nouveau">
@@ -98,7 +98,7 @@
                         </div>
                     </section>
                 </a>
-                <a href="/la_note_enchantee.html">
+                <a href="./la_note_enchantee.html">
                     <section class="section">
                         <div class="section__box-img">
                             <div class="section__box-img--box-nouveau">
@@ -121,7 +121,7 @@
                         </div>
                     </section>
                 </a>
-                <a href="/a_la_francaise.html">
+                <a href="./a_la_francaise.html">
                     <section class="section">
                         <div class="section__box-img">
                             <img class="section__box-img--img" alt="La palette du goût" src="./sources/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.png">
@@ -139,7 +139,7 @@
                         </div>
                     </section>
                 </a>
-                <a href="/le_delice_des_sens.html">
+                <a href="./le_delice_des_sens.html">
                     <section class="section">
                         <div class="section__box-img">
                             <img class="section__box-img--img" alt="La palette du goût" src="./sources/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.png">
