--- a/la_note_enchantee.html
+++ b/la_note_enchantee.html
@@ -11,7 +11,7 @@
     <header class="header">
         <div class="header__box-logo">
             <a href="index.html">
-                <img class="header__box-logo--picto-fleche" alt="pictogramme d'une flèche" src="/sources/picto/picto_fleche.png">
+                <img class="header__box-logo--picto-fleche" alt="pictogramme d'une flèche" src="./sources/picto/picto_fleche.png">
             </a>
             <img class="header__box-logo--logo" alt="logo ohmyfood" src="./sources/logo/ohmyfood.png">
         </div>
