--- a/la_palette_du_goût.html
+++ b/la_palette_du_goût.html
@@ -177,7 +177,7 @@
                         </p>
                     </div>
                     <div class="box-sections-menu__section--check">
-                       <img class="box-sections-menu__section--check--img"  src="/sources/picto/picto_check.png">
+                       <img class="box-sections-menu__section--check--img"  src="./sources/picto/picto_check.png">
                     </div>
                 </section>
                 <section class="box-sections-menu__section anim-section8">
@@ -195,7 +195,7 @@
                         </p>
                     </div>
                     <div class="box-sections-menu__section--check">
-                       <img class="box-sections-menu__section--check--img"  src="/sources/picto/picto_check.png">
+                       <img class="box-sections-menu__section--check--img"  src="./sources/picto/picto_check.png">
                     </div>
                 </section>
                 <section class="box-sections-menu__section anim-section9">
@@ -215,7 +215,7 @@
                         </p>
                     </div>
                     <div class="box-sections-menu__section--check">
-                       <img class="box-sections-menu__section--check--img"  src="/sources/picto/picto_check.png">
+                       <img class="box-sections-menu__section--check--img"  src="./sources/picto/picto_check.png">
                     </div>
                 </section>
             </div>
