--- a/la_palette_du_goût.html
+++ b/la_palette_du_goût.html
@@ -111,7 +111,7 @@
                         </p>
                     </div>
                     <div class="box-sections-menu__section--check">
-                       <img class="box-sections-menu__section--check--img"  src="/sources/picto/picto_check.png">
+                       <img class="box-sections-menu__section--check--img"  src="./sources/picto/picto_check.png">
                     </div>
                 </section>
                 <section class="box-sections-menu__section anim-section5">
@@ -129,7 +129,7 @@
                         </p>
                     </div>
                     <div class="box-sections-menu__section--check">
-                       <img class="box-sections-menu__section--check--img"  src="/sources/picto/picto_check.png">
+                       <img class="box-sections-menu__section--check--img"  src="./sources/picto/picto_check.png">
                     </div>
                 </section>
                 <section class="box-sections-menu__section anim-section6">
@@ -149,7 +149,7 @@
                         </p>
                     </div>
                     <div class="box-sections-menu__section--check">
-                       <img class="box-sections-menu__section--check--img"  src="/sources/picto/picto_check.png">
+                       <img class="box-sections-menu__section--check--img"  src="./sources/picto/picto_check.png">
                     </div>
                 </section>
             </div>
