ok y'en a marre

--- a/la_palette_du_goût.html
+++ b/la_palette_du_goût.html
@@ -63,7 +63,7 @@
                         </p>
                     </div>
                     <div class="box-sections-menu__section--check">
-                       <img class="box-sections-menu__section--check--img"  src="/sources/picto/picto_check.png">
+                       <img class="box-sections-menu__section--check--img"  src="./sources/picto/picto_check.png">
                     </div>
                 </section>
                 <section class="box-sections-menu__section anim-section3">
@@ -83,7 +83,7 @@
                         </p>
                     </div>
                     <div class="box-sections-menu__section--check">
-                       <img class="box-sections-menu__section--check--img"  src="/sources/picto/picto_check.png">
+                       <img class="box-sections-menu__section--check--img"  src="./sources/picto/picto_check.png">
                     </div>
                 </section>
             </div>
@@ -91,7 +91,6 @@
         <article class="article-menu">
             <div class="article-menu__box-titre">
                 <h2 class="article-menu__box-titre--titre">
-                    PLATS
                 </h2>
                 <div class="article-menu__box-titre--trait"></div>
             </div>
