modif H2 page la palette (PLAYS)

--- a/la_palette_du_goût.html
+++ b/la_palette_du_goût.html
@@ -91,6 +91,7 @@
         <article class="article-menu">
             <div class="article-menu__box-titre">
                 <h2 class="article-menu__box-titre--titre">
+                    PLATS
                 </h2>
                 <div class="article-menu__box-titre--trait"></div>
             </div>
