--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                         </div>
                     </section>
                 </a>
-                <a href="./a_la_francaise.html">
+                <a href="./html/a_la_francaise.html">
                     <section class="section">
                         <div class="section__box-img">
                             <img class="section__box-img--img" alt="La palette du goût" src="./sources/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.png">
@@ -186,7 +186,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="">
+                    <a href="mailto:exemple@exemple.com">
                         Contact
                     </a>
                 </li>
