--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header class="header">
         <div class="header__box-logo">
-            <img class="header__box-logo--logo" alt="logo ohmyfood" src="./sources/logo/ohmyfood.png">
+            <img class="header__box-logo--logo" alt="logo ohmyfood" src="../../sources/logo/ohmyfood.png">
         </div>
         <div class="header__box-position">
             <img class="header__box-position--picto" alt="pictogramme position carte" src="./sources/picto/picto_carte.png">
