--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                 </h2>
             </div>
             <div class="main__article--box-sections">
-                <a href="./la_palette_du_goût.html">
+                <a href="./html/la_palette_du_goût.html">
                     <section class="section">
                         <div class="section__box-img">
                             <div class="section__box-img--box-nouveau">
