--- a/html/la_palette_du_goût.html
+++ b/html/la_palette_du_goût.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="css/style.css" rel="stylesheet">
+    <link href="../css/style.css" rel="stylesheet">
     <title>Ohmyfood</title>
 </head>
 <body>
     <header class="header">
         <div class="header__box-logo">
             <a href="index.html">
-                <img class="header__box-logo--picto-fleche" alt="pictogramme d'une flèche" src="./sources/picto/picto_fleche.png">
+                <img class="header__box-logo--picto-fleche" alt="pictogramme d'une flèche" src="../sources/picto/picto_fleche.png">
             </a>
             <img class="header__box-logo--logo" alt="logo ohmyfood" src="../sources/logo/ohmyfood.png">
         </div>
